py_module/GateSize/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    EQ
    LCURLY
    LSQUARE
    RCURLY
    RSQUARE

Grammar

Rule 0     S' -> source_text
Rule 1     source_text -> module_star
Rule 2     module_star -> module module_star
Rule 3     module_star -> empty
Rule 4     module -> MODULE ID list_of_ports SEMI module_item_star ENDMODULE
Rule 5     list_of_ports -> LPAREN port more_ports RPAREN
Rule 6     list_of_ports -> empty
Rule 7     port -> ID
Rule 8     more_ports -> COMMA port more_ports
Rule 9     more_ports -> empty
Rule 10    declaration -> port_type list_of_variables SEMI
Rule 11    port_type -> INPUT
Rule 12    port_type -> OUTPUT
Rule 13    port_type -> WIRE
Rule 14    list_of_variables -> ID more_variables
Rule 15    more_variables -> COMMA ID more_variables
Rule 16    more_variables -> empty
Rule 17    module_item_star -> module_item module_item_star
Rule 18    module_item_star -> empty
Rule 19    module_item -> module_instantiation
Rule 20    module_item -> declaration
Rule 21    module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN SEMI
Rule 22    list_of_module_connections -> module_port_connection more_module_ports
Rule 23    list_of_module_connections -> named_port_connection more_named_ports
Rule 24    module_port_connection -> expression
Rule 25    module_port_connection -> empty
Rule 26    more_module_ports -> COMMA module_port_connection more_module_ports
Rule 27    more_module_ports -> empty
Rule 28    named_port_connection -> DOT ID LPAREN expression RPAREN
Rule 29    more_named_ports -> COMMA named_port_connection more_named_ports
Rule 30    more_named_ports -> empty
Rule 31    expression -> INTEGER
Rule 32    expression -> ID
Rule 33    empty -> <empty>

Terminals, with rules where they appear

COLON                : 
COMMA                : 8 15 26 29
DOT                  : 28
ENDMODULE            : 4
EQ                   : 
ID                   : 4 7 14 15 21 21 28 32
INPUT                : 11
INTEGER              : 31
LCURLY               : 
LPAREN               : 5 21 28
LSQUARE              : 
MODULE               : 4
OUTPUT               : 12
RCURLY               : 
RPAREN               : 5 21 28
RSQUARE              : 
SEMI                 : 4 10 21
WIRE                 : 13
error                : 

Nonterminals, with rules where they appear

declaration          : 20
empty                : 3 6 9 16 18 25 27 30
expression           : 24 28
list_of_module_connections : 21
list_of_ports        : 4
list_of_variables    : 10
module               : 2
module_instantiation : 19
module_item          : 17
module_item_star     : 4 17
module_port_connection : 22 26
module_star          : 1 2
more_module_ports    : 22 26
more_named_ports     : 23 29
more_ports           : 5 8
more_variables       : 14 15
named_port_connection : 23 29
port                 : 5 8
port_type            : 10
source_text          : 0

Parsing method: LALR

state 0

    (0) S' -> . source_text
    (1) source_text -> . module_star
    (2) module_star -> . module module_star
    (3) module_star -> . empty
    (4) module -> . MODULE ID list_of_ports SEMI module_item_star ENDMODULE
    (33) empty -> .

    MODULE          shift and go to state 5
    $end            reduce using rule 33 (empty -> .)

    source_text                    shift and go to state 1
    module_star                    shift and go to state 2
    module                         shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> source_text .



state 2

    (1) source_text -> module_star .

    $end            reduce using rule 1 (source_text -> module_star .)


state 3

    (2) module_star -> module . module_star
    (2) module_star -> . module module_star
    (3) module_star -> . empty
    (4) module -> . MODULE ID list_of_ports SEMI module_item_star ENDMODULE
    (33) empty -> .

    MODULE          shift and go to state 5
    $end            reduce using rule 33 (empty -> .)

    module                         shift and go to state 3
    module_star                    shift and go to state 6
    empty                          shift and go to state 4

state 4

    (3) module_star -> empty .

    $end            reduce using rule 3 (module_star -> empty .)


state 5

    (4) module -> MODULE . ID list_of_ports SEMI module_item_star ENDMODULE

    ID              shift and go to state 7


state 6

    (2) module_star -> module module_star .

    $end            reduce using rule 2 (module_star -> module module_star .)


state 7

    (4) module -> MODULE ID . list_of_ports SEMI module_item_star ENDMODULE
    (5) list_of_ports -> . LPAREN port more_ports RPAREN
    (6) list_of_ports -> . empty
    (33) empty -> .

    LPAREN          shift and go to state 9
    SEMI            reduce using rule 33 (empty -> .)

    list_of_ports                  shift and go to state 8
    empty                          shift and go to state 10

state 8

    (4) module -> MODULE ID list_of_ports . SEMI module_item_star ENDMODULE

    SEMI            shift and go to state 11


state 9

    (5) list_of_ports -> LPAREN . port more_ports RPAREN
    (7) port -> . ID

    ID              shift and go to state 13

    port                           shift and go to state 12

state 10

    (6) list_of_ports -> empty .

    SEMI            reduce using rule 6 (list_of_ports -> empty .)


state 11

    (4) module -> MODULE ID list_of_ports SEMI . module_item_star ENDMODULE
    (17) module_item_star -> . module_item module_item_star
    (18) module_item_star -> . empty
    (19) module_item -> . module_instantiation
    (20) module_item -> . declaration
    (33) empty -> .
    (21) module_instantiation -> . ID ID LPAREN list_of_module_connections RPAREN SEMI
    (10) declaration -> . port_type list_of_variables SEMI
    (11) port_type -> . INPUT
    (12) port_type -> . OUTPUT
    (13) port_type -> . WIRE

    ENDMODULE       reduce using rule 33 (empty -> .)
    ID              shift and go to state 14
    INPUT           shift and go to state 21
    OUTPUT          shift and go to state 22
    WIRE            shift and go to state 23

    module_item_star               shift and go to state 15
    module_item                    shift and go to state 16
    empty                          shift and go to state 17
    module_instantiation           shift and go to state 18
    declaration                    shift and go to state 19
    port_type                      shift and go to state 20

state 12

    (5) list_of_ports -> LPAREN port . more_ports RPAREN
    (8) more_ports -> . COMMA port more_ports
    (9) more_ports -> . empty
    (33) empty -> .

    COMMA           shift and go to state 25
    RPAREN          reduce using rule 33 (empty -> .)

    more_ports                     shift and go to state 24
    empty                          shift and go to state 26

state 13

    (7) port -> ID .

    COMMA           reduce using rule 7 (port -> ID .)
    RPAREN          reduce using rule 7 (port -> ID .)


state 14

    (21) module_instantiation -> ID . ID LPAREN list_of_module_connections RPAREN SEMI

    ID              shift and go to state 27


state 15

    (4) module -> MODULE ID list_of_ports SEMI module_item_star . ENDMODULE

    ENDMODULE       shift and go to state 28


state 16

    (17) module_item_star -> module_item . module_item_star
    (17) module_item_star -> . module_item module_item_star
    (18) module_item_star -> . empty
    (19) module_item -> . module_instantiation
    (20) module_item -> . declaration
    (33) empty -> .
    (21) module_instantiation -> . ID ID LPAREN list_of_module_connections RPAREN SEMI
    (10) declaration -> . port_type list_of_variables SEMI
    (11) port_type -> . INPUT
    (12) port_type -> . OUTPUT
    (13) port_type -> . WIRE

    ENDMODULE       reduce using rule 33 (empty -> .)
    ID              shift and go to state 14
    INPUT           shift and go to state 21
    OUTPUT          shift and go to state 22
    WIRE            shift and go to state 23

    module_item                    shift and go to state 16
    module_item_star               shift and go to state 29
    empty                          shift and go to state 17
    module_instantiation           shift and go to state 18
    declaration                    shift and go to state 19
    port_type                      shift and go to state 20

state 17

    (18) module_item_star -> empty .

    ENDMODULE       reduce using rule 18 (module_item_star -> empty .)


state 18

    (19) module_item -> module_instantiation .

    ID              reduce using rule 19 (module_item -> module_instantiation .)
    INPUT           reduce using rule 19 (module_item -> module_instantiation .)
    OUTPUT          reduce using rule 19 (module_item -> module_instantiation .)
    WIRE            reduce using rule 19 (module_item -> module_instantiation .)
    ENDMODULE       reduce using rule 19 (module_item -> module_instantiation .)


state 19

    (20) module_item -> declaration .

    ID              reduce using rule 20 (module_item -> declaration .)
    INPUT           reduce using rule 20 (module_item -> declaration .)
    OUTPUT          reduce using rule 20 (module_item -> declaration .)
    WIRE            reduce using rule 20 (module_item -> declaration .)
    ENDMODULE       reduce using rule 20 (module_item -> declaration .)


state 20

    (10) declaration -> port_type . list_of_variables SEMI
    (14) list_of_variables -> . ID more_variables

    ID              shift and go to state 31

    list_of_variables              shift and go to state 30

state 21

    (11) port_type -> INPUT .

    ID              reduce using rule 11 (port_type -> INPUT .)


state 22

    (12) port_type -> OUTPUT .

    ID              reduce using rule 12 (port_type -> OUTPUT .)


state 23

    (13) port_type -> WIRE .

    ID              reduce using rule 13 (port_type -> WIRE .)


state 24

    (5) list_of_ports -> LPAREN port more_ports . RPAREN

    RPAREN          shift and go to state 32


state 25

    (8) more_ports -> COMMA . port more_ports
    (7) port -> . ID

    ID              shift and go to state 13

    port                           shift and go to state 33

state 26

    (9) more_ports -> empty .

    RPAREN          reduce using rule 9 (more_ports -> empty .)


state 27

    (21) module_instantiation -> ID ID . LPAREN list_of_module_connections RPAREN SEMI

    LPAREN          shift and go to state 34


state 28

    (4) module -> MODULE ID list_of_ports SEMI module_item_star ENDMODULE .

    MODULE          reduce using rule 4 (module -> MODULE ID list_of_ports SEMI module_item_star ENDMODULE .)
    $end            reduce using rule 4 (module -> MODULE ID list_of_ports SEMI module_item_star ENDMODULE .)


state 29

    (17) module_item_star -> module_item module_item_star .

    ENDMODULE       reduce using rule 17 (module_item_star -> module_item module_item_star .)


state 30

    (10) declaration -> port_type list_of_variables . SEMI

    SEMI            shift and go to state 35


state 31

    (14) list_of_variables -> ID . more_variables
    (15) more_variables -> . COMMA ID more_variables
    (16) more_variables -> . empty
    (33) empty -> .

    COMMA           shift and go to state 37
    SEMI            reduce using rule 33 (empty -> .)

    more_variables                 shift and go to state 36
    empty                          shift and go to state 38

state 32

    (5) list_of_ports -> LPAREN port more_ports RPAREN .

    SEMI            reduce using rule 5 (list_of_ports -> LPAREN port more_ports RPAREN .)


state 33

    (8) more_ports -> COMMA port . more_ports
    (8) more_ports -> . COMMA port more_ports
    (9) more_ports -> . empty
    (33) empty -> .

    COMMA           shift and go to state 25
    RPAREN          reduce using rule 33 (empty -> .)

    more_ports                     shift and go to state 39
    empty                          shift and go to state 26

state 34

    (21) module_instantiation -> ID ID LPAREN . list_of_module_connections RPAREN SEMI
    (22) list_of_module_connections -> . module_port_connection more_module_ports
    (23) list_of_module_connections -> . named_port_connection more_named_ports
    (24) module_port_connection -> . expression
    (25) module_port_connection -> . empty
    (28) named_port_connection -> . DOT ID LPAREN expression RPAREN
    (31) expression -> . INTEGER
    (32) expression -> . ID
    (33) empty -> .

    DOT             shift and go to state 46
    INTEGER         shift and go to state 47
    ID              shift and go to state 40
    COMMA           reduce using rule 33 (empty -> .)
    RPAREN          reduce using rule 33 (empty -> .)

    list_of_module_connections     shift and go to state 41
    module_port_connection         shift and go to state 42
    named_port_connection          shift and go to state 43
    expression                     shift and go to state 44
    empty                          shift and go to state 45

state 35

    (10) declaration -> port_type list_of_variables SEMI .

    ID              reduce using rule 10 (declaration -> port_type list_of_variables SEMI .)
    INPUT           reduce using rule 10 (declaration -> port_type list_of_variables SEMI .)
    OUTPUT          reduce using rule 10 (declaration -> port_type list_of_variables SEMI .)
    WIRE            reduce using rule 10 (declaration -> port_type list_of_variables SEMI .)
    ENDMODULE       reduce using rule 10 (declaration -> port_type list_of_variables SEMI .)


state 36

    (14) list_of_variables -> ID more_variables .

    SEMI            reduce using rule 14 (list_of_variables -> ID more_variables .)


state 37

    (15) more_variables -> COMMA . ID more_variables

    ID              shift and go to state 48


state 38

    (16) more_variables -> empty .

    SEMI            reduce using rule 16 (more_variables -> empty .)


state 39

    (8) more_ports -> COMMA port more_ports .

    RPAREN          reduce using rule 8 (more_ports -> COMMA port more_ports .)


state 40

    (32) expression -> ID .

    COMMA           reduce using rule 32 (expression -> ID .)
    RPAREN          reduce using rule 32 (expression -> ID .)


state 41

    (21) module_instantiation -> ID ID LPAREN list_of_module_connections . RPAREN SEMI

    RPAREN          shift and go to state 49


state 42

    (22) list_of_module_connections -> module_port_connection . more_module_ports
    (26) more_module_ports -> . COMMA module_port_connection more_module_ports
    (27) more_module_ports -> . empty
    (33) empty -> .

    COMMA           shift and go to state 51
    RPAREN          reduce using rule 33 (empty -> .)

    more_module_ports              shift and go to state 50
    empty                          shift and go to state 52

state 43

    (23) list_of_module_connections -> named_port_connection . more_named_ports
    (29) more_named_ports -> . COMMA named_port_connection more_named_ports
    (30) more_named_ports -> . empty
    (33) empty -> .

    COMMA           shift and go to state 54
    RPAREN          reduce using rule 33 (empty -> .)

    more_named_ports               shift and go to state 53
    empty                          shift and go to state 55

state 44

    (24) module_port_connection -> expression .

    COMMA           reduce using rule 24 (module_port_connection -> expression .)
    RPAREN          reduce using rule 24 (module_port_connection -> expression .)


state 45

    (25) module_port_connection -> empty .

    COMMA           reduce using rule 25 (module_port_connection -> empty .)
    RPAREN          reduce using rule 25 (module_port_connection -> empty .)


state 46

    (28) named_port_connection -> DOT . ID LPAREN expression RPAREN

    ID              shift and go to state 56


state 47

    (31) expression -> INTEGER .

    COMMA           reduce using rule 31 (expression -> INTEGER .)
    RPAREN          reduce using rule 31 (expression -> INTEGER .)


state 48

    (15) more_variables -> COMMA ID . more_variables
    (15) more_variables -> . COMMA ID more_variables
    (16) more_variables -> . empty
    (33) empty -> .

    COMMA           shift and go to state 37
    SEMI            reduce using rule 33 (empty -> .)

    more_variables                 shift and go to state 57
    empty                          shift and go to state 38

state 49

    (21) module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN . SEMI

    SEMI            shift and go to state 58


state 50

    (22) list_of_module_connections -> module_port_connection more_module_ports .

    RPAREN          reduce using rule 22 (list_of_module_connections -> module_port_connection more_module_ports .)


state 51

    (26) more_module_ports -> COMMA . module_port_connection more_module_ports
    (24) module_port_connection -> . expression
    (25) module_port_connection -> . empty
    (31) expression -> . INTEGER
    (32) expression -> . ID
    (33) empty -> .

    INTEGER         shift and go to state 47
    ID              shift and go to state 40
    COMMA           reduce using rule 33 (empty -> .)
    RPAREN          reduce using rule 33 (empty -> .)

    module_port_connection         shift and go to state 59
    expression                     shift and go to state 44
    empty                          shift and go to state 45

state 52

    (27) more_module_ports -> empty .

    RPAREN          reduce using rule 27 (more_module_ports -> empty .)


state 53

    (23) list_of_module_connections -> named_port_connection more_named_ports .

    RPAREN          reduce using rule 23 (list_of_module_connections -> named_port_connection more_named_ports .)


state 54

    (29) more_named_ports -> COMMA . named_port_connection more_named_ports
    (28) named_port_connection -> . DOT ID LPAREN expression RPAREN

    DOT             shift and go to state 46

    named_port_connection          shift and go to state 60

state 55

    (30) more_named_ports -> empty .

    RPAREN          reduce using rule 30 (more_named_ports -> empty .)


state 56

    (28) named_port_connection -> DOT ID . LPAREN expression RPAREN

    LPAREN          shift and go to state 61


state 57

    (15) more_variables -> COMMA ID more_variables .

    SEMI            reduce using rule 15 (more_variables -> COMMA ID more_variables .)


state 58

    (21) module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN SEMI .

    ID              reduce using rule 21 (module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN SEMI .)
    INPUT           reduce using rule 21 (module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN SEMI .)
    OUTPUT          reduce using rule 21 (module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN SEMI .)
    WIRE            reduce using rule 21 (module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN SEMI .)
    ENDMODULE       reduce using rule 21 (module_instantiation -> ID ID LPAREN list_of_module_connections RPAREN SEMI .)


state 59

    (26) more_module_ports -> COMMA module_port_connection . more_module_ports
    (26) more_module_ports -> . COMMA module_port_connection more_module_ports
    (27) more_module_ports -> . empty
    (33) empty -> .

    COMMA           shift and go to state 51
    RPAREN          reduce using rule 33 (empty -> .)

    more_module_ports              shift and go to state 62
    empty                          shift and go to state 52

state 60

    (29) more_named_ports -> COMMA named_port_connection . more_named_ports
    (29) more_named_ports -> . COMMA named_port_connection more_named_ports
    (30) more_named_ports -> . empty
    (33) empty -> .

    COMMA           shift and go to state 54
    RPAREN          reduce using rule 33 (empty -> .)

    more_named_ports               shift and go to state 63
    empty                          shift and go to state 55

state 61

    (28) named_port_connection -> DOT ID LPAREN . expression RPAREN
    (31) expression -> . INTEGER
    (32) expression -> . ID

    INTEGER         shift and go to state 47
    ID              shift and go to state 40

    expression                     shift and go to state 64

state 62

    (26) more_module_ports -> COMMA module_port_connection more_module_ports .

    RPAREN          reduce using rule 26 (more_module_ports -> COMMA module_port_connection more_module_ports .)


state 63

    (29) more_named_ports -> COMMA named_port_connection more_named_ports .

    RPAREN          reduce using rule 29 (more_named_ports -> COMMA named_port_connection more_named_ports .)


state 64

    (28) named_port_connection -> DOT ID LPAREN expression . RPAREN

    RPAREN          shift and go to state 65


state 65

    (28) named_port_connection -> DOT ID LPAREN expression RPAREN .

    COMMA           reduce using rule 28 (named_port_connection -> DOT ID LPAREN expression RPAREN .)
    RPAREN          reduce using rule 28 (named_port_connection -> DOT ID LPAREN expression RPAREN .)

